# videoPlayer

./: CMakeLists.txt  README.md  header.h  main.cpp  moc_myWidget.cpp  myWidget.cpp  myWidget.h  videoPlayer.cpp
